# tikcoin

./: .gitignore  Anchor.toml  README.md  deploy-testnet.sh  load-env.sh
.cargo/: config.toml
app/: index.html  package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  index.css  types.ts
app/src/components/: CreatorCard.tsx  Navigation.tsx
app/src/pages/: Creators.tsx  Dashboard.tsx  Portfolio.tsx  Settings.tsx
programs/tikcoin/: Cargo.toml
programs/tikcoin/src/: bonding_curve.rs  error.rs  lib.rs  state.rs
programs/tikcoin/src/instructions/: buy_tokens.rs  create_creator_token.rs  mod.rs  sell_tokens.rs
programs/tikcoin/src/state/: bonding_curve.rs  creator_token.rs  mod.rs  user_profile.rs
tests/: tikcoin.js
